# MattTools

./: .gitignore  LICENSE  README.md  __init__.py  plotting.py  pyproject.toml  setup.py  stats.py  tests.py
.github/workflows/: test.yml
MattTools/: __init__.py  modeling.py  plotting.py  stats.py  utils.py
tests/: conftest.py  test_modeling.py  test_package.py  test_plotting.py  test_stats.py  test_utils.py
