[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matttools"
version = "1.0.0"
description = "Personal toolkit for ML and bioinformatics research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matthew Muller", email = "matt.alex.muller@gmail.com"},
]
maintainers = [
    {name = "Matthew Muller", email = "matt.alex.muller@gmail.com"},
]
keywords = [
    "machine learning",
    "bioinformatics",
    "statistics",
    "data analysis",
    "visualization",
    "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "tqdm>=4.60.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
bio = [
    "biopython>=1.79",
    "pysam>=0.19.0",
    "pyBigWig>=0.3.18",
]
plotting = [
    "plotly>=5.0.0",
    "bokeh>=2.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]
all = [
    "matttools[bio,plotting,dev]",
]

[project.urls]
Repository = "https://github.com/mattmuller0/MattTools"

[tool.setuptools.packages.find]
where = ["."]
include = ["matttools*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["matttools"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]